--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
               <a class="nav-link" href="#about">About</a>
               <a class="nav-link" href="#skills">Skills</a>
               <a class="nav-link" href="#services">Services</a>
-              <a class="nav-link" href="#">Portfolio</a>
-              <a class="nav-link" href="#">Contact</a>
+              <a class="nav-link" href="#portfolio">Portfolio</a>
             </div>
           </div>
         </div>
@@ -56,13 +55,13 @@
                     <img src="assets/img/profile.jpeg" alt="" width="250" class="img-about">
                     <div class="social-media-container justify-content-center">
                         <div class="icon">
-                            <a href="" class="github"><i class="fab fa-github"></i></a>
+                            <a href="https://github.com/ariabagaswara23" class="github"><i class="fab fa-github"></i></a>
                         </div>
                         <div class="icon">
-                            <a href="" class="linkedin"><i class="fab fa-linkedin"></i></a>
+                            <a href="https://www.linkedin.com/in/aria-bagaswara-8772941a7/" class="linkedin"><i class="fab fa-linkedin"></i></a>
                         </div>
                         <div class="icon">
-                            <a href="" class="instagram"><i class="fab fa-instagram"></i></a>
+                            <a href="https://www.instagram.com/aria.bagaswara/" class="instagram"><i class="fab fa-instagram"></i></a>
                         </div>
                     </div>
                 </div>
@@ -157,14 +156,14 @@
                 <h2 class="section-title">Services</h2>
             </div>
             <div class="row justify-content-center">
-                <div class="card bg-dark text-white" style="width: 20rem;">
+                <div class="card bg-dark text-white shadow" style="width: 20rem;">
                     <img src="assets/img/frontend.jpeg" class="card-img" alt="..." style="opacity: 30%;">
                     <div class="card-img-overlay text-center">
                         <h4><i class="fas fa-code"></i></h4>
                         <h5 class="card-title">Front-End Web Development</h5>
                     </div>
                 </div>
-                <div class="card bg-dark text-white" style="width: 20rem;">
+                <div class="card bg-dark text-white shadow" style="width: 20rem;">
                     <img src="assets/img/backend.jpeg" class="card-img" alt="..." style="opacity: 30%;">
                     <div class="card-img-overlay text-center">
                         <h4><i class="fas fa-database"></i></h4>
@@ -186,7 +185,7 @@
                       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
                     </div>
-                    <div class="carousel-inner">
+                    <div class="carousel-inner shadow">
                       <div class="carousel-item active">
                         <img src="assets/img/WebPerpus.png" class="d-block w-100" alt="..." style="opacity: 80%;">
                         <div class="carousel-caption d-none d-md-block">
@@ -214,6 +213,25 @@
             </div>
         </div>
     </section>
+    <footer>
+        <div class="container">
+            <div class="row text-center">
+                <h3>Aria Bagaswara</h3>
+                <div class="social-media justify-content-center">
+                    <div class="icon">
+                        <a href="https://www.linkedin.com/in/aria-bagaswara-8772941a7/"><i class="fab fa-linkedin linkedin"></i></a>
+                    </div>
+                    <div class="icon">
+                        <a href="https://github.com/ariabagaswara23"><i class="fab fa-github github"></i></a>
+                    </div>
+                    <div class="icon">
+                        <a href="https://www.instagram.com/aria.bagaswara/"><i class="fab fa-instagram instagram"></i></a>
+                    </div>
+                </div>
+                <p>&copy; Aria Bagaswara. All right reserved</p>
+            </div>
+        </div>
+    </footer>
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
