--- a/index.html
+++ b/index.html
@@ -184,6 +184,7 @@
                     <div class="carousel-indicators">
                       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
                     </div>
                     <div class="carousel-inner shadow">
                       <div class="carousel-item active">
@@ -198,6 +199,13 @@
                         <div class="carousel-caption d-none d-md-block">
                           <h5>Sistem Keuangan Online</h5>
                           <p>School Finance Online System Website</p>
+                        </div>
+                      </div>
+                      <div class="carousel-item">
+                        <img src="assets/img/covid19web.png" class="d-block w-100" alt="..." style="opacity: 80%;">
+                        <div class="carousel-caption d-none d-md-block">
+                          <h5>Covid-19 Stats</h5>
+                          <p>Covid-19 Statistic Website</p>
                         </div>
                       </div>
                     </div>
